mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_iterate_non_list.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot iterate over type int
--> test_scripts/error_cases/semantic_iterate_non_list.mux:2:14
   |
 2 | for int i in 5 {
   |              ^
   |
= help: The 'for' loop can only iterate over list types. Use .to_list() for sets/maps, or range(start, end) for numeric ranges.
